--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,15 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      skydrop location
     </ion-title>
+    
+  <ion-input [(ngModel)]="id" placeholder="Type your id"></ion-input><button ion-button (click)="map.submitInfo(id)" >Send</button><button ion-button (click)="map.centerLocation()">Actualizar Ubicacion</button>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+	<div class="map-wrapper">
+		  <map #map></map> 
+	</div> 
 </ion-content>
